syntax = "proto3";

package uberpopug.proto;

import "model.proto";

message UserSignedUpV1 {
  string public_id = 1;
  string name = 2;
  Role role = 3;
}