syntax = "proto3";

package uberpopug.proto;

import "model.proto";

message UserStreamingV1 {
  string public_id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
}
